--- a/src/xml/escp2/media/Makefile.am
+++ b/src/xml/escp2/media/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.14 2010/07/18 16:56:18 rlk Exp $
+## $Id: Makefile.am,v 1.15 2010/08/11 00:26:09 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -54,6 +54,7 @@ pkgxmldata_DATA =				\
 	photo_pigment.xml			\
 	picturemate_4.xml			\
 	picturemate_6.xml			\
+	pro3880_ultrachrome_k3v.xml		\
 	pro_gen1.xml				\
 	pro_gen2.xml				\
 	pro_pigment.xml				\
