added 2nd standard and draft suffix to foomatic print mode name possibilities for Canon printers.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -1284,6 +1284,8 @@ sub qualityorder {
 		    "dpi_highmono",
 		    "dpi_mono",
 		    "dpi_draft",
+                    "dpi_std2",
+                    "dpi_draft2",
 		    "dpi_draftmono",
 		    "dpi_glossphotohigh",
 		    "dpi_photohigh",
