updated tested modes for MP960, removed non-working modes. added MP510 and MP520 support, updated iP2700, smalll correction to other Canon printers. Added Cartridge selection (partial implementation) to driver. Updated pixma_parse to handle more inks, and output more debug info.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -1292,10 +1292,12 @@ sub qualityorder {
 		    "dpi_photohigh",
 		    "dpi_photohigh2",
 		    "dpi_photohigh3",
+		    "dpi_photohigh4",
 	            "dpi_tshirt",
 		    "dpi_photo",
 		    "dpi_photo2",
 		    "dpi_photo3",
+		    "dpi_photo4",
 		    "dpi_photodraft",
 		    "dpi_photodraft2",
 		    "dpi_photodraft3"
