add support for Canon MX300, MX310, MX330, MX340, MX350. Some of the photo modes are bound to be buggy, but most modes use only CMYK or CMY and should work.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -1281,7 +1281,9 @@ sub qualityorder {
 		    # Canon
 		    "dmt",
 		    "dpi_high",
+		    "dpi_high2",
 		    "dpi_highmono",
+		    "dpi_highmono2",
 		    "dpi_mono",
 		    "dpi_draft",
                     "dpi_std2",
