--- a/src/xml/escp2/model/Makefile.am
+++ b/src/xml/escp2/model/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.25 2011/03/03 02:09:01 rlk Exp $
+## $Id: Makefile.am,v 1.26 2011/03/05 18:38:37 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -139,7 +139,8 @@ pkgxmldata_DATA =				\
 	model_110.xml				\
 	model_111.xml				\
 	model_112.xml				\
-	model_113.xml
+	model_113.xml				\
+	model_114.xml
 
 xml-stamp: $(pkgxmldata_DATA) Makefile.am
 	-rm -f $@ $@.tmp
