Added experimental support for Canon iP1200, iP1300. Correction to iP1000 definition.

--- a/src/foomatic/foomatic-generator.in
+++ b/src/foomatic/foomatic-generator.in
@@ -1282,12 +1282,16 @@ sub qualityorder {
 		    "dmt",
 		    "dpi_high",
 		    "dpi_high2",
+		    "dpi_high3",
+		    "dpi_high4",
 		    "dpi_highmono",
 		    "dpi_highmono2",
 		    "dpi_mono",
 		    "dpi_draft",
+		    "dpi_draft2",
+		    "dpi_draft3",
                     "dpi_std2",
-                    "dpi_draft2",
+                    "dpi_std3",
 		    "dpi_draftmono",
 		    "dpi_draftmono2",
 		    "dpi_glossphotohigh",
