Allow specification of geometry and custom page size.

--- a/src/testpattern/run-testpattern-2.in
+++ b/src/testpattern/run-testpattern-2.in
@@ -21,6 +21,11 @@ my $run_installed = 0;
 my $use_min_res = 0;
 my $help = 0;
 my $output = undef;
+my $hsize = 0.1;
+my $vsize = 0.1;
+my $left = 0.15;
+my $top = 0.15;
+my $geometry = "";
 
 my @extras = ();
 my @job_extras = ();
@@ -52,6 +57,7 @@ my %rerun_cases;
 GetOptions("v+"  => \$valgrind,
 	   "c"   => \$callgrind,
 	   "g"   => \$gdb_attach,
+	   "G=s" => \$geometry,
 	   "n"   => \$dontrun,
 	   "p:i" => \$std_pages,
 	   "P:i" => \$duplex_pages,
@@ -81,6 +87,7 @@ Usage: run-testpattern-2 [opts] [model ...]
                     families may be tested.  By default, all printer families
 		    are tested.
     -g              Attach testpattern job to gdb
+    -G geometry     Specify geometry (=(HxV)(+L+T))
     -i              Use the installed Gutenprint libraries rather than
                     source tree
     -m md5_dir      Generate MD5 checksums and place them in the specified
@@ -158,6 +165,38 @@ chomp $pwd;
 my $srcdir = $ENV{"srcdir"};
 my $sdir;
 
+$geometry =~ s/^=*//;
+if ($geometry =~ /^(([01]?(\.[0-9]*)?)x([01]?(\.[0-9]*)?))?(\+([01]?(\.[0-9]*)?)\+([01]?(\.[0-9]*)?))?$/) {
+    my ($H) = $2;
+    my ($V) = $4;
+    my ($L) = $7;
+    my ($T) = $9;
+    if ($H) {
+	$hsize = $H;
+	if ($hsize > 1) {
+	    $hsize = 1;
+	}
+    }
+    if ($V) {
+	$vsize = $V;
+	if ($vsize > 1) {
+	    $vsize = 1;
+	}
+    }
+    if ($L) {
+	$left = $L;
+    }
+    if ($T) {
+	$top = $T;
+    }
+    if ($left + $hsize > 1) {
+	$left = 1 - $hsize;
+    }
+    if ($top + $vsize > 1) {
+	$top = 1 - $vsize;
+    }
+}
+
 if ("$srcdir" eq "" || "$srcdir" eq ".") {
     $sdir = $pwd;
 } elsif ($srcdir =~ /^\//) {
@@ -192,7 +231,12 @@ sub set_opt($$$) {
     } elsif ($type == 4) {
 	push @extras, "parameter_curve \"$opt\" \"$val\";\n";
     } else {
-	push @extras, "parameter \"$opt\" \"$val\";\n";
+	if ($opt eq "PageSize" && $val =~ /^([^.]+)\.([0-9]+)x([0-9]+)$/) {
+	    push @extras, "parameter \"PageSize\" \"$1\";\n";
+	    push @extras, "page_size $2 $3;\n";
+	} else {
+	    push @extras, "parameter \"$opt\" \"$val\";\n";
+	}
     }
 }
 
@@ -224,14 +268,12 @@ sub print_one_testpattern($;$) {
 	if ($page == $pages - 1) {
 	    $stuff .= "end_job;\n";
 	}
-	$stuff .= << 'EOF';
-hsize 0.1;
-vsize 0.1;
-left 0.15;
-top 0.15;
-blackline 0;
-steps 16;
-EOF
+	$stuff .= sprintf("hsize %f;\n", $hsize);
+	$stuff .= sprintf("vsize %f;\n", $vsize);
+	$stuff .= sprintf("left %f;\n", $left);
+	$stuff .= sprintf("top %f;\n", $top);
+	$stuff .= "blackline 0;\n";
+	$stuff .= "steps 16;\n";
 	if ($raw > 0) {
 	    $stuff .= "mode extended $raw 16;\n";
 	    $stuff .= "xpattern ";
