Add various Epson printers.
Add preliminary (CcMmYKkk) support for Stylus Pro 7900/9900.

--- a/src/xml/escp2/qualitypresets/Makefile.am
+++ b/src/xml/escp2/qualitypresets/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.4 2009/05/30 14:10:32 rlk Exp $
+## $Id: Makefile.am,v 1.5 2011/12/14 03:02:58 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -28,6 +28,7 @@ pkgxmldatadir = $(pkgdatadir)/@GUTENPRINT_MAJOR_VERSION@.@GUTENPRINT_MINOR_VERSI
 pkgxmldata_DATA =				\
 	p1_5.xml				\
 	picturemate.xml				\
+	prox900.xml				\
 	standard.xml				\
 	v2880.xml				\
 	wf40.xml
