--- a/src/xml/escp2/model/Makefile.am
+++ b/src/xml/escp2/model/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.29 2011/10/31 00:35:26 rlk Exp $
+## $Id: Makefile.am,v 1.30 2011/12/14 03:02:58 rlk Exp $
 ## Copyright (C) 2008 Robert Krawitz
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -141,7 +141,9 @@ pkgxmldata_DATA =				\
 	model_112.xml				\
 	model_113.xml				\
 	model_114.xml				\
-	model_115.xml
+	model_115.xml				\
+	model_116.xml				\
+	model_117.xml
 
 xml-stamp: $(pkgxmldata_DATA) Makefile.am
 	-rm -f $@ $@.tmp
