Use rm -rf to remove foomatic-db.

--- a/src/foomatic/Makefile.am
+++ b/src/foomatic/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.55 2011/12/24 02:09:56 rlk Exp $
+## $Id: Makefile.am,v 1.56 2011/12/24 02:10:46 rlk Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -91,12 +91,12 @@ install-kit:
 	fi
 
 clean-local:
-	-$(RM) -r foomatic-db
+	-$(RM) -rf foomatic-db
 
 foomatic-data: foomatic-stamp
 
 foomatic-stamp: foomatic-generator $(noinst_PROGRAMS) mk_printerlist $(top_builddir)/src/xml/xml-stamp
-	-$(RM) -r foomatic-db
+	-$(RM) -rf foomatic-db
 	$(FOOMATIC_GENERATOR) -t $(srcdir)/foomatic-templates $(FOOMATIC_GENERATOR_EXTRA_OPTS) $(FOOMATIC_GENERATOR_FOOMATIC_3_OPTS)
 	$(FOOMATIC_GENERATOR) -s -t $(srcdir)/foomatic-templates $(FOOMATIC_GENERATOR_EXTRA_OPTS) $(FOOMATIC_GENERATOR_FOOMATIC_3_OPTS)
 	touch foomatic-stamp
