Prep for Gutenprint 5.2.8-pre1

--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.230 2011/12/20 14:07:02 rlk Exp $
+dnl $Id: configure.ac,v 1.231 2011/12/24 02:17:06 rlk Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -38,7 +38,7 @@ pushdef([GUTENPRINT_NAME],              [gutenprint])
 pushdef([GUTENPRINT_MAJOR_VERSION],     [5])
 pushdef([GUTENPRINT_MINOR_VERSION],     [2])
 pushdef([GUTENPRINT_MICRO_VERSION],     [8])
-pushdef([GUTENPRINT_EXTRA_VERSION],     [])
+pushdef([GUTENPRINT_EXTRA_VERSION],     [-pre1])
 pushdef([GUTENPRINT_CURRENT_INTERFACE], [3])
 pushdef([GUTENPRINT_INTERFACE_AGE],     [0])
 pushdef([GUTENPRINT_BINARY_AGE],        [0])
@@ -49,7 +49,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.230 $)
+AC_REVISION($Revision: 1.231 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -1074,6 +1074,7 @@ echo "    Build testpattern generator:                $BUILD_TESTPATTERN"
 echo
 echo "  Installation summary:"
 echo "    Installation prefix:                        $prefix"
+echo "    Exec prefix:                                $exec_prefix"
 echo "    Data directory:                             $PACKAGE_DATA_DIR"
 echo "    Library directory:                          $PACKAGE_LIB_DIR"
 echo "    XML data directory:                         $PKGXMLDATADIR"
