Undo previous change.

--- a/src/cups/test-rastertogutenprint.in
+++ b/src/cups/test-rastertogutenprint.in
@@ -87,7 +87,7 @@ cleanup() {
 pdftops="`type -p pdftops`"
 
 if [ ! -n "$pdftops" -o ! -x "$pdftops" ] ; then
-    pdftops="`type -p pdftops`"
+    pdftops="`whence pdftops`"
 fi
 
 if [ -n "$pdftops" -a ! -x "$cupsdir/cgpdftoraster" ] ; then
