--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-dnl $Id: configure.ac,v 1.236 2012/07/02 11:47:36 rlk Exp $
+dnl $Id: configure.ac,v 1.237 2012/11/18 17:12:20 speachy Exp $
 dnl Copyright (C) 2001-2004 Roger Leigh
 dnl 
 dnl This program is free software; you can redistribute it and/or modify
@@ -55,7 +55,7 @@ pushdef([GUTENPRINT_VERSION], GUTENPRINT_MAJOR_VERSION.GUTENPRINT_MINOR_VERSION.
 
 AC_INIT(GUTENPRINT_NAME, GUTENPRINT_VERSION, [gimp-print-devel@lists.sourceforge.net])
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.236 $)
+AC_REVISION($Revision: 1.237 $)
 AC_CONFIG_SRCDIR(src/main/print-vars.c)
 AC_CONFIG_AUX_DIR(scripts)
 STP_INIT
@@ -394,6 +394,13 @@ STP_ARG_WITH_DETAILED([readline], ,
 dnl if test -z "${[EXTRA_LIBREADLINE_DEPS]}" ; then
 dnl   [EXTRA_LIBREADLINE_DEPS]=""
 dnl fi
+
+# libusb-1.0 (For SELPHY backend)
+PKG_CHECK_MODULES([LIBUSB], [libusb-1.0],
+                  [HAVE_LIBUSB=yes
+                   BUILD_SELPHY=yes],
+                  [HAVE_LIBUSB=no
+	           BUILD_SELPHY=no])
 
 AC_PATH_PROGS([GIMPTOOL2_CHECK], [gimptool-2.0 gimptool])
 if test -z "${GIMPTOOL2_CHECK}" ; then
@@ -836,6 +843,8 @@ AM_CONDITIONAL(INSTALL_SAMPLES, test x${INSTALL_SAMPLES} = xyes)
 
 AM_CONDITIONAL(INSTALL_USER_GUIDE, test x${INSTALL_USER_GUIDE} = xyes)
 
+AM_CONDITIONAL(BUILD_SELPHY, test x${BUILD_SELPHY} = xyes)
+
 STP_CUPS_PATH
 
 # loadable modules
@@ -1069,6 +1078,7 @@ if test "$BUILD_CUPS" != "no" ; then
 else
     echo "    Build CUPS:                                 $BUILD_CUPS"
 fi
+echo "    Build Canon SELPHY spooler/backend:         $BUILD_SELPHY"
 echo "    Build Ghostscript IJS driver:               $BUILD_GHOSTSCRIPT"
 echo "    Build Foomatic data:                        $BUILD_FOOMATIC"
 if test "$BUILD_FOOMATIC" != "no" ; then
