--- a/src/cups/Makefile.am
+++ b/src/cups/Makefile.am
@@ -1,4 +1,4 @@
-## $Id: Makefile.am,v 1.125 2012/11/23 12:21:02 speachy Exp $
+## $Id: Makefile.am,v 1.126 2012/11/24 03:31:30 speachy Exp $
 ## Copyright (C) 2000 Roger Leigh
 ##
 ## This program is free software; you can redistribute it and/or modify
@@ -87,9 +87,12 @@ if BUILD_SELPHY
 cupsexec_backend_PROGRAMS = selphy
 endif
 
+## CUPS backends require no world-execute permissions if they are to be
+## executed as root, and the SELPHY backend must be run as root.
+## See http://www.cups.org/documentation.php/doc-1.6/man-backend.html
 if BUILD_SELPHY
 install-exec-hook:
-	chmod 700 $(pkglibdir)/backend/selphy
+	chmod 700 $(DESTDIR)$(pkglibdir)/backend/selphy
 endif
 
 
